# solve-genomics

./: .gitignore  404.html  BENCHMARKS.md  CMakeLists.txt  ENABLE_GITHUB_PAGES.md  GITHUB_PAGES_ENABLE.md  GITHUB_PAGES_FIX.md  GITHUB_PAGES_SETUP.md  GITHUB_PAGES_STATUS.md  GITHUB_SETUP.md  Gemfile  README.md  README_GH_PAGES.md  _config.yml  index.html  index.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  pages.yml
_includes/: footer.html  head.html
_layouts/: default.html
_typescript/: charts.ts  main.ts
assets/css/: input.css  main.css
assets/js/: charts.d.ts  charts.d.ts.map  main.d.ts  main.d.ts.map
doc/: Makefile  README.md  benchmark_results.tex  paper.tex  presentation.tex
doc/figures/: .gitkeep
src/: ExactMatch.cpp  ExactMatch.h  FuzzySearch.cpp  FuzzySearch.h  NaiveSearch.cpp  NaiveSearch.h  NeedlemanWunsch.cpp  NeedlemanWunsch.h  SequenceAligner.h  SmithWaterman.cpp  SmithWaterman.h  advanced_dp.cpp  advanced_dp.h  aho_corasick.cpp  aho_corasick.h  association_list.cpp  association_list.h  benchmark.cpp  bitap.cpp  bitap.h  chord_hashing.cpp  chord_hashing.h  classic_string_matching.cpp  classic_string_matching.h  cnn_sequence.cpp  cnn_sequence.h  compression.h  concurrent_multi_search.cpp  concurrent_multi_search.h  dancing_links.cpp  dancing_links.h  ddmcmc_search.cpp  ddmcmc_search.h  deep_learning_advanced.cpp  deep_learning_advanced.h  edit_distance_algorithms.cpp  edit_distance_algorithms.h  embedding_search.cpp  embedding_search.h  grammar_compression.cpp  (+38 more)
tests/: ExactMatch_test.cpp  FuzzySearch_test.cpp  NaiveSearch_test.cpp  NeedlemanWunsch_test.cpp  README.md  SmithWaterman_test.cpp  algorithm_comparison_test.cpp  integration_test.cpp  test_main.cpp  utils_test.cpp
